[package]
name = "rconsul"
version = "0.1.0"
edition = "2024"

[dependencies]
tui-checkbox = "0.4.3"
crossterm = "0.29.0"
ratatui = "0.30.0"
color-eyre = "0.6.5"
anyhow = "1.0.102"
reqwest = "0.13.2"
tokio = "1.50.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
cli-clipboard = "0.4.0"
